# CoAct-HUD

./: .gitignore  CoActAgentOriginalImplementation.md  README.md  coact_taskset_runner.py  hud-sdk-implementation.md  pyproject.toml  run_osworld.py
coact/: OAI_CONFIG_LIST  async_utils.py  coact_adapter.py  coding_agent.py  cua_agent.py  operator_agent.py
